# XeniOS

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  premake5.lua  xenia-build.py
src/xenia/: CMakeLists.txt  config.cc  config.h  emulator.cc  emulator.h  memory.cc  memory.h  storage_flags.cc  storage_flags.h  xbox.h
src/xenia/app/: CMakeLists.txt  Info.plist  Info_ios.plist  achievements_dialog_qt.cc  achievements_dialog_qt.h  config_dialog.cc  config_dialog.h  config_dialog_qt.cc  config_dialog_qt.h  context_menu_widget_qt.cc  context_menu_widget_qt.h  emulator_window.cc  emulator_window.h  game_compat_db.cc  game_compat_db.h  game_list_dialog_qt.cc  game_list_dialog_qt.h  launch_data_restart_dialog_qt.cc  launch_data_restart_dialog_qt.h  main_resources.rc  moc_achievements_dialog_qt.cc  moc_context_menu_widget_qt.cc  moc_launch_data_restart_dialog_qt.cc  moc_notification_widget_qt.cc  notification_widget_qt.cc  notification_widget_qt.h  patches_dialog.cc  patches_dialog.h  postprocessing_dialog_qt.cc  postprocessing_dialog_qt.h  premake5.lua  profile_dialog_qt.cc  profile_dialog_qt.h  profile_editor_dialog_qt.cc  profile_editor_dialog_qt.h  recent_titles_ui.cc  recent_titles_ui.h  xenia_main.cc  xenia_main_ios.mm
src/xenia/app/discord/: discord_presence.cc  premake5.lua
src/xenia/apu/: CMakeLists.txt  audio_media_player.cc  audio_media_player.h  audio_system.cc  audio_system.h  conversion.h  premake5.lua  xma_context.h  xma_context_fake.cc  xma_context_fake.h  xma_context_master.cc  xma_context_new.cc  xma_context_new.h  xma_context_old.cc  xma_decoder.cc  xma_decoder.h  xmp_state.h
src/xenia/apu/alsa/: alsa_audio_system.h  premake5.lua
src/xenia/apu/sdl/: sdl_audio_driver.cc  sdl_audio_system.cc
src/xenia/base/: CMakeLists.txt  atomic.h  autorelease_pool_mac.cc  autorelease_pool_mac.h  bit_stream.cc  chrono.h  clock.cc  clock_posix.cc  console_app_main_mac.cc  console_app_main_posix.cc  cvar.h  debugging_mac.cc  exception_handler_mac.cc  exception_handler_posix.cc  filesystem_posix.cc  filesystem_win.cc  logging.cc  logging.h  main_init_ios.cc  main_init_mac.cc  main_init_posix.cc  main_init_win.cc  main_win.cc  main_win.h  mapped_memory.h  mapped_memory_posix.cc  mapped_memory_win.cc  math.h  memory.cc  memory_posix.cc  memory_win.cc  mutex.cc  mutex.h  platform.h  platform_win.h  premake5.lua  profiling.cc  string_buffer.cc  string_buffer.h  string_util.h  (+6 more)
src/xenia/base/testing/: CMakeLists.txt  memory_test.cc  physical_heap_test.cc  premake5.lua  texture_conversion_test.cc  threading_test.cc
src/xenia/cpu/: export_resolver.h  lzx.cc  mmio_handler.cc  premake5.lua  processor.cc  thread_state.cc  xex_module.cc  xex_module.h
src/xenia/cpu/backend/: backend.cc  backend.h  code_cache_base.h  null_backend.h
src/xenia/cpu/hir/: value.cc
src/xenia/cpu/ppc/: ppc_context.h  ppc_emit_altivec.cc  ppc_emit_fpu.cc  ppc_emit_memory.cc  ppc_hir_builder.cc  ppc_opcode_disasm_gen.cc  ppc_opcode_info.h  ppc_translator.cc
src/xenia/cpu/testing/: CMakeLists.txt  backend_integration_test.cc  misc_opcode_test.cc  premake5.lua  util.h
src/xenia/debug/gdb/: CMakeLists.txt  gdbstub.cc  gdbstub.h  premake5.lua
src/xenia/debug/ui/: debug_window.cc
src/xenia/gpu/: CMakeLists.txt  command_processor.cc  command_processor.h  draw_util.cc  draw_util.h  dxbc.h  dxbc_shader_translator.cc  dxbc_shader_translator_fetch.cc  dxbc_shader_translator_om.cc  gpu_flags.cc  gpu_flags.h  graphics_system.cc  graphics_system.h  pm4_command_processor_declare.h  pm4_command_processor_implement.h  premake5.lua  primitive_processor.cc  primitive_processor.h  register_table.inc  render_target_cache.h  shader.h  shader_compiler_main.cc  shader_translator.cc  shared_memory.cc  shared_memory.h  spirv_builder.h  spirv_compatibility.h  spirv_shader.h  spirv_shader_translator.cc  spirv_shader_translator.h  spirv_shader_translator_alu.cc  spirv_shader_translator_fetch.cc  spirv_shader_translator_rb.cc  texture_cache.cc  texture_cache.h  texture_conversion.cc  texture_util.cc  texture_util.h  trace_dump.cc  trace_dump.h  (+6 more)
src/xenia/gpu/d3d12/: CMakeLists.txt  d3d12_command_processor.cc  d3d12_command_processor.h  d3d12_graphics_system.cc  d3d12_primitive_processor.cc  d3d12_primitive_processor.h  d3d12_render_target_cache.cc  d3d12_shared_memory.cc  d3d12_shared_memory.h  d3d12_texture_cache.cc  d3d12_texture_cache.h  (+7 more)
src/xenia/hid/: CMakeLists.txt  hid_demo.cc  input_system.cc  input_system.h
src/xenia/kernel/: CMakeLists.txt  kernel_state.cc  kernel_state.h  premake5.lua  user_module.cc  xenumerator.cc  xenumerator.h  xfile.cc  xfile.h  xobject.cc  xobject.h  xsocket.cc  xsocket.h  xthread.cc  xthread.h  xtimer.cc
src/xenia/patcher/: CMakeLists.txt  embedded_bundle.cc  embedded_bundle.h  patch_db.cc  patch_db.h  patcher.cc  patcher.h
src/xenia/ui/: CMakeLists.txt  achievements_dialog_qt.cc  achievements_dialog_qt.h  advanced_settings_dialog_wx.cc  advanced_settings_dialog_wx.h  apple_theme_tokens.cc  apple_theme_tokens.h  apple_ui_flags.cc  apple_ui_flags.h  apple_ui_navigation.h  apple_ui_navigation_mac.cc  audio_helper.cc  audio_helper.h  audio_helper_qt.cc  audio_helper_qt.h  config_dialog_qt.cc  config_dialog_qt.h  config_helpers.h  confirm_dialog_widget_qt.cc  confirm_dialog_widget_qt.h  content_install_dialog_qt.cc  content_install_dialog_qt.h  context_menu_widget_qt.cc  context_menu_widget_qt.h  controller_hotkeys_dialog_qt.cc  controller_hotkeys_dialog_qt.h  file_picker.h  file_picker_gtk.cc  file_picker_ios.mm  file_picker_qt.cc  file_picker_wx.cc  game_config_dialog_qt.cc  game_config_dialog_qt.h  game_config_dialog_wx.cc  game_config_dialog_wx.h  game_list_dialog_qt.cc  game_list_dialog_qt.h  game_list_panel_wx.cc  game_list_panel_wx.h  gamepad_dialog_qt.cc  (+110 more)
src/xenia/vfs/: CMakeLists.txt  entry.cc  gdfx_util.h  iso_metadata.cc  iso_metadata.h  premake5.lua  stfs_metadata.cc  stfs_metadata.h  vfs_dump.cc  virtual_file_system.cc  virtual_file_system.h  xex_metadata.cc  xex_metadata.h  xex_metadata_main.cc  zar_metadata.cc  zar_metadata.h
(+486 files in other folders)
