cmake_minimum_required(VERSION 3.20)
project(xenia LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)

# Detect target architecture.
# - VS generator: CMAKE_GENERATOR_PLATFORM (from -A flag) takes priority.
# - Ninja/Makefiles: CMAKE_SYSTEM_PROCESSOR (set via -DCMAKE_SYSTEM_NAME
#   + -DCMAKE_SYSTEM_PROCESSOR for cross-compile, or auto-detected natively).
if(CMAKE_GENERATOR_PLATFORM)
  if(CMAKE_GENERATOR_PLATFORM STREQUAL "ARM64")
    set(XE_TARGET_AARCH64 TRUE)
    set(XE_TARGET_X86_64 FALSE)
  else()
    set(XE_TARGET_AARCH64 FALSE)
    set(XE_TARGET_X86_64 TRUE)
  endif()
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64|ARM64")
  set(XE_TARGET_AARCH64 TRUE)
  set(XE_TARGET_X86_64 FALSE)
else()
  set(XE_TARGET_AARCH64 FALSE)
  set(XE_TARGET_X86_64 TRUE)
endif()
message(STATUS "Target architecture: XE_TARGET_AARCH64=${XE_TARGET_AARCH64} XE_TARGET_X86_64=${XE_TARGET_X86_64} (CMAKE_SYSTEM_PROCESSOR=${CMAKE_SYSTEM_PROCESSOR})")

option(XENIA_BUILD_TESTS "Build test suites" OFF)
option(XENIA_BUILD_MISC "Build misc subprojects (trace viewers, shader compiler, vfs-dump, demos)" OFF)
option(XENIA_ENABLE_LTO "Enable link-time optimization in Release (slow link)" ON)

get_property(_is_multi_config GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
if(_is_multi_config)
  set(CMAKE_CONFIGURATION_TYPES "Checked;Debug;Release;Valgrind" CACHE STRING "" FORCE)
endif()

# Checked and Valgrind inherit Debug's flags as a starting point; the
# platform blocks below layer sanitizers and config-specific tweaks on top.
foreach(_cfg CHECKED VALGRIND)
  set(CMAKE_C_FLAGS_${_cfg} "${CMAKE_C_FLAGS_DEBUG}" CACHE STRING "" FORCE)
  set(CMAKE_CXX_FLAGS_${_cfg} "${CMAKE_CXX_FLAGS_DEBUG}" CACHE STRING "" FORCE)
  set(CMAKE_EXE_LINKER_FLAGS_${_cfg} "${CMAKE_EXE_LINKER_FLAGS_DEBUG}" CACHE STRING "" FORCE)
  set(CMAKE_SHARED_LINKER_FLAGS_${_cfg} "${CMAKE_SHARED_LINKER_FLAGS_DEBUG}" CACHE STRING "" FORCE)
  set(CMAKE_STATIC_LINKER_FLAGS_${_cfg} "${CMAKE_STATIC_LINKER_FLAGS_DEBUG}" CACHE STRING "" FORCE)
endforeach()

if(WIN32)
  set(XE_PLATFORM_NAME "Windows")
else()
  set(XE_PLATFORM_NAME "Linux")
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/${XE_PLATFORM_NAME}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/${XE_PLATFORM_NAME}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/obj/${XE_PLATFORM_NAME}")

file(MAKE_DIRECTORY "${PROJECT_SOURCE_DIR}/scratch")

find_package(Python3 REQUIRED COMPONENTS Interpreter)

# Debug/Checked/Valgrind are compiled against the release CRT (/MD) so we
# can link the Vulkan SDK's release-only SPIRV-Tools libs. Force any
# imported library (Qt6::*, etc.) to resolve to its Release variant in
# those configs too — otherwise Qt6*d.dll drags in /MDd and the process
# ends up mixing two CRTs, corrupting std::string/QString allocations.
# NOCONFIG is the fallback for imported targets that ship without a
# configuration suffix (FindOpenGL on Linux creates OpenGL::OpenGL this
# way — without NOCONFIG in the map we fail to resolve it in Debug et al).
set(CMAKE_MAP_IMPORTED_CONFIG_DEBUG "Release;NOCONFIG" CACHE STRING "" FORCE)
set(CMAKE_MAP_IMPORTED_CONFIG_CHECKED "Release;NOCONFIG" CACHE STRING "" FORCE)
set(CMAKE_MAP_IMPORTED_CONFIG_VALGRIND "Release;NOCONFIG" CACHE STRING "" FORCE)

include(cmake/XeniaHelpers.cmake)

include_directories(
  ${PROJECT_SOURCE_DIR}
  ${PROJECT_SOURCE_DIR}/src
  ${PROJECT_SOURCE_DIR}/third_party
  # Build directory — for `#include "version.h"` (generated by xenia-build.py
  # into CMAKE_BINARY_DIR, which varies per configure: build/, build-vs/, ...).
  ${CMAKE_BINARY_DIR}
)

add_compile_definitions(
  VULKAN_HPP_NO_TO_STRING
  IMGUI_DISABLE_OBSOLETE_FUNCTIONS
  IMGUI_DISABLE_DEFAULT_FONT
  IMGUI_USE_STB_SPRINTF
  USE_CPP17  # Tabulate
  _LIB
)

# ==============================================================================
# Qt6 (optional, gated on the QT_DIR env var)
# ==============================================================================

set(XE_QT_DIR "$ENV{QT_DIR}")
if(XE_QT_DIR)
  list(PREPEND CMAKE_PREFIX_PATH "${XE_QT_DIR}")
  set(QT_NO_PRIVATE_MODULE_WARNING ON)
  find_package(Qt6 COMPONENTS Core Gui GuiPrivate Widgets QUIET)
  if(Qt6_FOUND)
    message(STATUS "Qt6: using QT_DIR=${XE_QT_DIR} (version ${Qt6_VERSION})")
    set(CMAKE_AUTOMOC ON)
    # CMAKE_INCLUDE_CURRENT_DIR is intentionally off. Setting it globally
    # would add each target's source dir to its include path, and
    # src/xenia/base contains files named assert.h / string.h / memory.h /
    # mutex.h that collide with C/C++ standard headers. Targets that need
    # their source dir on the path (xenia-ui, so AUTOMOC-generated moc
    # files can find Q_OBJECT headers) add it via target_include_directories.
    if(NOT WIN32)
      add_link_options("-Wl,-rpath,${XE_QT_DIR}/lib")
    endif()
    set(XE_HAS_QT TRUE)

    # Qt6 pulls in third-party find-modules (FindOpenGL, FindXKB, …) that
    # create UNKNOWN IMPORTED targets with only a bare IMPORTED_LOCATION (no
    # config suffix).  Ninja Multi-Config can't map NOCONFIG locations for
    # custom configs even with CMAKE_MAP_IMPORTED_CONFIG_*.  Re-tag every
    # such target as Release so the existing MAP resolves them correctly.
    get_property(_imported_targets DIRECTORY PROPERTY IMPORTED_TARGETS)
    foreach(_tgt IN LISTS _imported_targets)
      get_target_property(_loc ${_tgt} IMPORTED_LOCATION)
      if(_loc AND NOT _loc MATCHES "-NOTFOUND$")
        get_target_property(_confs ${_tgt} IMPORTED_CONFIGURATIONS)
        if(NOT _confs OR _confs MATCHES "-NOTFOUND$")
          set_target_properties(${_tgt} PROPERTIES
            IMPORTED_CONFIGURATIONS "Release"
            IMPORTED_LOCATION_RELEASE "${_loc}"
          )
        endif()
      endif()
    endforeach()
  else()
    message(WARNING "QT_DIR=${XE_QT_DIR} is set but find_package(Qt6) failed; building without Qt")
  endif()
endif()

# ==============================================================================
# Platform-specific global settings
# ==============================================================================

if(MSVC)
  # CRT runtime selection via CMP0091. Debug and Release use the release
  # CRT (/MD); Checked uses the debug CRT (/MDd) because it pairs /RTCsu
  # with ASan.
  set(CMAKE_MSVC_RUNTIME_LIBRARY
      "MultiThreaded$<$<CONFIG:Checked>:Debug>DLL"
      CACHE STRING "" FORCE)

  add_compile_options(
    /utf-8             # non-Latin-codepage-safe source parsing
    /Zc:__cplusplus    # correct __cplusplus macro value (Qt6 needs this)
    /Zc:preprocessor   # conformant preprocessor
    /wd4201            # nameless struct/unions are ok
    /MP
  )
  if(XE_TARGET_X86_64)
    add_compile_options(/arch:AVX)
  endif()
  add_compile_definitions(
    _CRT_NONSTDC_NO_DEPRECATE
    _CRT_SECURE_NO_WARNINGS
    WIN32
    _WIN64=1
    _AMD64=1
    UNICODE
    _UNICODE
  )
  add_link_options(
    /ignore:4006  # duplicate symbols in static libs
    /ignore:4221  # empty obj files
  )
  link_libraries(
    ntdll wsock32 ws2_32 xinput comctl32 shcore shlwapi dxguid bcrypt
  )

  # Checked: /RTCsu + ASan + debug symbols. /RTC1 from CMake's default
  # Debug flags conflicts with /RTCsu, so strip it first.
  string(REPLACE "/RTC1" "" CMAKE_C_FLAGS_CHECKED "${CMAKE_C_FLAGS_CHECKED}")
  string(REPLACE "/RTC1" "" CMAKE_CXX_FLAGS_CHECKED "${CMAKE_CXX_FLAGS_CHECKED}")
  string(APPEND CMAKE_C_FLAGS_CHECKED " /RTCsu /fsanitize=address /Zi")
  string(APPEND CMAKE_CXX_FLAGS_CHECKED " /RTCsu /fsanitize=address /Zi")
  string(APPEND CMAKE_EXE_LINKER_FLAGS_CHECKED " /INCREMENTAL:NO")
  add_compile_definitions(
    $<$<CONFIG:Checked>:DEBUG>
    $<$<CONFIG:Checked>:NDEBUG>
    # STB_SPRINTF is incompatible with ASan runtime hooks.
    $<$<CONFIG:Checked>:IMGUI_USE_STB_SPRINTF_DISABLED>
  )

  # Debug: /RTC1 requires the debug CRT, so strip it — we're on /MD. Pin
  # _ITERATOR_DEBUG_LEVEL=0 so our STL object layouts match release-CRT
  # prebuilts (Vulkan SDK SPIRV-Tools) and we don't hit LNK2038.
  string(REPLACE "/RTC1" "" CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG}")
  string(REPLACE "/RTC1" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
  add_compile_definitions(
    $<$<CONFIG:Debug>:DEBUG>
    $<$<CONFIG:Debug>:_NO_DEBUG_HEAP=1>
    $<$<CONFIG:Debug>:_ITERATOR_DEBUG_LEVEL=0>
  )

  add_compile_definitions(
    $<$<CONFIG:Release>:NDEBUG>
    $<$<CONFIG:Release>:_NO_DEBUG_HEAP=1>
  )
  add_compile_options(
    $<$<CONFIG:Release>:/Gw>
    $<$<CONFIG:Release>:/GS->   # NoBufferSecurityCheck
  )
  # /Ob3 is a stronger inline heuristic than CMake's default /Ob2.
  string(REPLACE "/Ob2" "/Ob3" CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE}")
  string(REPLACE "/Ob2" "/Ob3" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
  # LTCG (whole-program optimization). Disabled by -DXENIA_ENABLE_LTO=OFF
  # for faster Release link times during iterative work.
  if(XENIA_ENABLE_LTO)
    add_compile_options($<$<CONFIG:Release>:/GL>)
    add_link_options($<$<CONFIG:Release>:/LTCG>)
    set(CMAKE_STATIC_LINKER_FLAGS_RELEASE "${CMAKE_STATIC_LINKER_FLAGS_RELEASE} /LTCG")
  endif()
  # Release has no PDB.
  string(REPLACE "/Zi" "" CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE}")
  string(REPLACE "/Zi" "" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
  string(REPLACE "/DEBUG" "" CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE}")

else()
  # GCC/Clang (Linux)
  if(XE_TARGET_X86_64)
    add_compile_options(-mavx)
  endif()

  add_compile_options(
    $<$<COMPILE_LANGUAGE:CXX>:-Wno-switch>
    $<$<COMPILE_LANGUAGE:CXX>:-Wno-attributes>
  )

  if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    add_compile_options(
      $<$<COMPILE_LANGUAGE:CXX>:-Wno-deprecated-register>
      $<$<COMPILE_LANGUAGE:CXX>:-Wno-deprecated-volatile>
      $<$<COMPILE_LANGUAGE:CXX>:-Wno-deprecated-enum-enum-conversion>
    )
    if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 20)
      add_compile_options(
        $<$<COMPILE_LANGUAGE:CXX>:-Wno-deprecated-literal-operator>
        $<$<COMPILE_LANGUAGE:CXX>:-Wno-nontrivial-memcall>
      )
    endif()
    if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 21)
      add_compile_options(
        $<$<COMPILE_LANGUAGE:CXX>:-Wno-character-conversion>
      )
    endif()
  elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    add_compile_options(
      $<$<COMPILE_LANGUAGE:CXX>:-Wno-unused-result>
      $<$<COMPILE_LANGUAGE:CXX>:-Wno-volatile>
      $<$<COMPILE_LANGUAGE:CXX>:-Wno-template-id-cdtor>
      $<$<COMPILE_LANGUAGE:CXX>:-Wno-return-type>
      $<$<COMPILE_LANGUAGE:CXX>:-Wno-deprecated>
      -fpermissive  # HACK
    )
    add_link_options(-fpermissive)
  endif()

  add_compile_options(
    $<$<COMPILE_LANGUAGE:C>:-Wno-implicit-function-declaration>
  )

  find_package(PkgConfig REQUIRED)
  pkg_check_modules(GTK3 REQUIRED gtk+-x11-3.0)
  include_directories(${GTK3_INCLUDE_DIRS})
  link_directories(${GTK3_LIBRARY_DIRS})
  add_compile_options(${GTK3_CFLAGS_OTHER})

  link_libraries(stdc++fs dl lz4 m pthread rt)

  # Link group so executables resolve circular static-lib deps.
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--start-group")
  set(CMAKE_CXX_STANDARD_LIBRARIES "${CMAKE_CXX_STANDARD_LIBRARIES} -Wl,--end-group")

  # Checked: UBSan.
  string(APPEND CMAKE_C_FLAGS_CHECKED " -fsanitize=undefined")
  string(APPEND CMAKE_CXX_FLAGS_CHECKED " -fsanitize=undefined")
  string(APPEND CMAKE_EXE_LINKER_FLAGS_CHECKED " -fsanitize=undefined")
  add_compile_definitions(
    $<$<CONFIG:Checked>:DEBUG>
    $<$<CONFIG:Checked>:NDEBUG>
  )

  add_compile_definitions(
    $<$<CONFIG:Debug>:DEBUG>
    $<$<CONFIG:Debug>:_NO_DEBUG_HEAP=1>
  )

  # Release keeps -g so crashes in the field have resolvable frames.
  add_compile_definitions(
    $<$<CONFIG:Release>:NDEBUG>
    $<$<CONFIG:Release>:_NO_DEBUG_HEAP=1>
  )
  add_compile_options(
    $<$<CONFIG:Release>:-O3>
    $<$<CONFIG:Release>:-finline-functions>
    $<$<CONFIG:Release>:-funroll-loops>
    $<$<CONFIG:Release>:-fomit-frame-pointer>
    $<$<CONFIG:Release>:-g>
  )
  # ThinLTO + lld. Gated behind XENIA_ENABLE_LTO so -DXENIA_ENABLE_LTO=OFF
  # produces a Release binary with the standard system linker and no LTO,
  # which links an order of magnitude faster during iterative work.
  if(XENIA_ENABLE_LTO)
    add_compile_options($<$<CONFIG:Release>:-flto=thin>)
    add_link_options(
      $<$<CONFIG:Release>:-flto=thin>
      $<$<CONFIG:Release>:-fuse-ld=lld>
    )
  endif()

  # Valgrind: -Og for debuggability without the pathological debug perf
  # cost, no sanitizers (they fight valgrind), no inlining so stack
  # traces reflect source structure.
  string(APPEND CMAKE_C_FLAGS_VALGRIND " -Og -g3 -fno-omit-frame-pointer -fno-inline-functions")
  string(APPEND CMAKE_CXX_FLAGS_VALGRIND " -Og -g3 -fno-omit-frame-pointer -fno-inline-functions")
  add_compile_definitions(
    $<$<CONFIG:Valgrind>:DEBUG>
    $<$<CONFIG:Valgrind>:NDEBUG>
    $<$<CONFIG:Valgrind>:_NO_DEBUG_HEAP=1>
  )
endif()

# ==============================================================================
# Subdirectories
# ==============================================================================

# third_party is added before Qt is made directory-global so its libs
# don't pull Qt into their compile lines.
add_subdirectory(third_party)

# Qt headers reach into src/xenia/kernel, src/xenia/gpu, etc. via
# transitive includes of app/emulator_window.h and ui/*_qt.h — not just
# the targets with Q_OBJECT. Linking Qt at directory scope keeps all
# xenia src libs consistent.
if(XE_HAS_QT)
  link_libraries(Qt6::Core Qt6::Gui Qt6::Widgets)
endif()

add_subdirectory(src/xenia)

set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT xenia-app)
